--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en"  data-bs-theme="dark">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -140,33 +140,6 @@
                         <li class="nav-item mb-2"><a href="#services" class="nav-link p-0 text-body-secondary">Features</a></li> 
                         <li class="nav-item mb-2"><a href="#about" class="nav-link p-0 text-body-secondary">About</a></li> 
                     </ul> 
-                </div> 
-                <div class="col-6 col-md-2 mb-3"> 
-                    <h5>Section</h5> 
-                    <ul class="nav flex-column"> 
-                        <li class="nav-item mb-2"><a href="#home" class="nav-link p-0 text-body-secondary">Home</a></li> 
-                        <li class="nav-item mb-2"><a href="#services" class="nav-link p-0 text-body-secondary">Features</a></li>
-                        <li class="nav-item mb-2"><a href="#about" class="nav-link p-0 text-body-secondary">About</a></li> 
-                    </ul> 
-                </div> 
-                <div class="col-6 col-md-2 mb-3"> 
-                    <h5>Section</h5> 
-                    <ul class="nav flex-column"> 
-                        <li class="nav-item mb-2"><a href="#home" class="nav-link p-0 text-body-secondary">Home</a></li> 
-                        <li class="nav-item mb-2"><a href="#services" class="nav-link p-0 text-body-secondary">Features</a></li> 
-                        <li class="nav-item mb-2"><a href="#about" class="nav-link p-0 text-body-secondary">About</a></li> 
-                    </ul> 
-                </div> 
-                <div class="col-md-5 offset-md-1 mb-3"> 
-                    <form> 
-                        <h5>Subscribe to our newsletter</h5> 
-                        <p>Monthly digest of what's new and exciting from us.</p> 
-                        <div class="d-flex flex-column flex-sm-row w-100 gap-2"> 
-                            <label for="newsletter1" class="visually-hidden">Email address</label> 
-                            <input id="newsletter1" type="email" class="form-control" placeholder="Email address" required> 
-                            <button class="btn btn-primary" type="button">Subscribe</button> 
-                        </div> 
-                    </form> 
                 </div> 
             </div> 
             <div class="d-flex flex-column flex-sm-row justify-content-between py-4 mt-4 border-top"> 
